--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,6 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Dela+Gothic+One&family=Fira+Sans:wght@100&family=Hind:wght@300&family=Inter:wght@100;300&family=Kaisei+Tokumin&family=Kanit:wght@800&family=Karla:ital,wght@0,200;0,500;1,200;1,500&family=Montserrat:ital,wght@0,300;0,500;1,200&family=Mooli&family=Mulish:ital,wght@0,200;0,700;1,500&family=Open+Sans:ital@1&family=Pacifico&family=Playfair+Display:ital@0;1&family=Poppins:ital,wght@1,900&family=Raleway:wght@200&family=Roboto+Mono:ital,wght@1,300&family=Rubik+Bubbles&family=Rubik:wght@500&family=Sedgwick+Ave+Display&family=Space+Grotesk:wght@300&family=Work+Sans:ital,wght@0,200;0,400;0,500;1,300;1,400&display=swap');
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: Work Sans;
 }
